# agent-book

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
chapter02/: notebook.ipynb
chapter03/: notebook.ipynb
chapter04/: notebook.ipynb
chapter05/: notebook.ipynb
chapter06/: notebook.ipynb
chapter07/: .gitignore  notebook.ipynb
chapter09/: notebook.ipynb
chapter10/: notebook.ipynb
chapter10/documentation_agent/: main.py
chapter12/: notebook.ipynb  settings.py
chapter12/cross_reflection/: main.py
chapter12/multi_path_plan_generation/: main.py
chapter12/passive_goal_creator/: main.py
chapter12/prompt_optimizer/: main.py
chapter12/response_optimizer/: main.py
chapter12/role_based_cooperation/: main.py
chapter12/self_reflection/: main.py
chapter12/single_path_plan_generation/: main.py
