[project]
name = "agent-book"
version = "0.1.0"
description = "LangChain と LangGraph による RAG・AI エージェント［実践］入門のサンプルコード"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    # 書籍の本文中明示されているバージョンは固定
    "langchain==0.3.0",
    "langchain-openai==0.2.0",
    "openai==1.40.6",
    "langchain-community==0.3.0",
    "GitPython==3.1.43",
    "langchain-text-splitters==0.3.0",
    "langchain-chroma",
    # 以下、本文中には特に示されていないライブラリ。
    # 各章のreqiurements.txt とあわせるのがベターだが、ここではまとめて記述。
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "ruff>=0.7", "pyright>=1.1"]
